<resources>
    <string name="app_name">Memoria V2</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Titulo">¡Memorama!</string>
    <string name="Tam">Tamaño</string>
    <string name="botonIniciar">Iniciar</string>
    <string name="botonPuntuaciones">Puntuaciones</string>
    <string name="botonInstrucciones">Instrucciones</string>
    <string name="botonAjustes">Ajustes</string>
    <string-array name="Dificultad_array">
        <item>4 X 4</item>
        <item>4 X 5</item>
        <item>4 X 6</item>
    </string-array>
    <string name="Instrucciones">
        El juego comienza con una cierta cantidad de casas,
        despues el jugador escoge dos casas que serán reveladas y
        si ambas son el mismo simbolo se quitan del tablero, en caso contrario se volverán a cubrir. \n\n
        El juego continúa hasta encontrar todos los pares de simbolos. \n\n
        Para obtener la mayor puntuación se deben encontrar en la menor cantidad de errores posibles.
    </string>
    <string name="botonAtras">Atras</string>
    <string name="borrarPuntuaciones">Borrar Puntuaciones</string>
    <string name="intentos"># de Intentos: </string>
    <string name="botoncreditos">Acerca de...</string>
    <string name="creditos">
        Proyecto de trabajo final para la clase de Programación en Android impartida por el profesor
        Héctor Antonio Villa Martinez en la carrera de Licenciatura en Ciencias de la Computación.\n\n
        Entregada el 14 de mayo de 2015.\n\n
        Hecha por Moises Gabriel Salas Aguilar Aguila y Jesus Antonio Ciscomani Vega
    </string>
</resources>
